# sftrimmer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sftrimmer.cpp
gigedit-1.2.1/: ChangeLog  Makefile.am  Makefile.in  Makefile.svn  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  gigedit.spec.in
gigedit-1.2.1/debian/: Makefile.am  Makefile.in  changelog  control  copyright
gigedit-1.2.1/doc/: Makefile.in
gigedit-1.2.1/doc/quickstart/: Makefile.am  Makefile.in  gigedit_quickstart.html
gigedit-1.2.1/gfx/: Makefile.in
gigedit-1.2.1/src/: Makefile.in
gigedit-1.2.1/src/gigedit/: CombineInstrumentsDialog.cpp  MacroEditor.cpp  MacrosSetup.cpp  Makefile.am  Makefile.in  ScriptPatchVars.cpp  ScriptPatchVars.h  Settings.cpp  Settings.h  compat.h  dimensionmanager.cpp  dimregionchooser.cpp  dimregionedit.cpp  dimregionedit.h  gigedit.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  paramedit.cpp  paramedit.h  regionchooser.cpp  scripteditor.cpp  scripteditor.h  wrapLabel.cc  wrapLabel.hh
gigedit-1.2.1/src/gigedit/gfx/: Makefile.am  Makefile.in
gigedit-1.2.1/src/plugin/: Makefile.in  linuxsamplerplugin.cpp
gigedit-1.2.1/win32/: Makefile.in  dllmain.cpp  gigedit.dev  gigedit.dev.in  gigedit.nsi  gigedit.nsi.in  libgigedit.dev  libgigedit.dev.in
libgig-4.4.1/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac  libgig.spec.in
libgig-4.4.1/debian/: Makefile.am  Makefile.in  changelog  control  copyright
libgig-4.4.1/doc/: Makefile.in  mainpage.dox
libgig-4.4.1/man/: Makefile.am  Makefile.in  gig2mono.1.in  gig2stereo.1.in  gigdump.1.in  gigextract.1.in  gigmerge.1.in  korg2gig.1.in  wav2gig.1.in
libgig-4.4.1/osx/: Makefile.in
libgig-4.4.1/osx/libgig.xcodeproj/: Makefile.in
libgig-4.4.1/src/: DLS.cpp  DLS.h  Makefile.am  Makefile.in  RIFF.cpp  RIFF.h  SF.cpp  Serialization.h  gig.cpp  gig.h  helper.h  sysdef.h
libgig-4.4.1/src/testcases/: Makefile.am  Makefile.in
libgig-4.4.1/src/tools/: CMakeLists.txt  Makefile.am  Makefile.in  sf2extract.cpp  sftrimmer.cpp  wav2gig.cpp
libgig-4.4.1/win32/: Makefile.in  dllmain.cpp  dlsdump.dev  gigdump.dev  gigextract.dev  libgig.dev  libgig.dev.in  rifftree.dev
linuxsampler-2.3.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  linuxsampler.spec.in
linuxsampler-2.3.1/Artwork/: Makefile.in
linuxsampler-2.3.1/Documentation/: Makefile.in  lscp.xml
linuxsampler-2.3.1/Documentation/Engines/: Makefile.in
linuxsampler-2.3.1/Documentation/Engines/gig/: Makefile.in
linuxsampler-2.3.1/debian/: Makefile.am  Makefile.in  changelog  control  copyright  files
linuxsampler-2.3.1/man/: Makefile.in
linuxsampler-2.3.1/osx/: Makefile.in
linuxsampler-2.3.1/osx/linuxsampler.xcodeproj/: Makefile.in
linuxsampler-2.3.1/scripts/: Makefile.am  Makefile.in
linuxsampler-2.3.1/src/: Makefile.in  Sampler.cpp  linuxsampler.cpp
linuxsampler-2.3.1/src/common/: Makefile.am  Makefile.in
linuxsampler-2.3.1/src/db/: Makefile.in
linuxsampler-2.3.1/src/drivers/: Makefile.in
linuxsampler-2.3.1/src/drivers/audio/: AudioOutputDeviceAlsa.cpp  AudioOutputDeviceArts.cpp  AudioOutputDeviceCoreAudio.cpp  Makefile.in
linuxsampler-2.3.1/src/drivers/midi/: Makefile.in  MidiInputDeviceAlsa.cpp  VirtualMidiDevice.cpp  VirtualMidiDevice.h
linuxsampler-2.3.1/src/effects/: Makefile.in
linuxsampler-2.3.1/src/engines/: AbstractEngineChannel.cpp  InstrumentManagerThread.cpp  InstrumentManagerThread.h  Makefile.in
linuxsampler-2.3.1/src/engines/common/: AbstractInstrumentManager.cpp  AbstractInstrumentManager.h  InstrumentScriptVM.cpp  Makefile.am  Makefile.in
linuxsampler-2.3.1/src/engines/gig/: Engine.cpp  Makefile.in  (+3 more)
linuxsampler-2.3.1/src/hostplugins/: Makefile.in
linuxsampler-2.3.1/src/network/: Makefile.in  lscp.y  lscp_shell_reference.cpp  lscpparser.cpp  lscpsymbols.h
linuxsampler-2.3.1/src/plugins/: InstrumentEditorFactory.cpp  InstrumentEditorFactory.h  Makefile.in
linuxsampler-2.3.1/src/scriptvm/: CoreVMFunctions.cpp  Makefile.am  Makefile.in  parser.cpp  parser.h  scanner.cpp
linuxsampler-2.3.1/src/shell/: Makefile.am  Makefile.in
linuxsampler-2.3.1/src/testcases/: Makefile.in
(+14 files in other folders)
