AM_CPPFLAGS = $(GTKMM_CFLAGS)

noinst_LTLIBRARIES = libgigeditgfx.la

libgigeditgfx_la_SOURCES = \
	builtinpix.cpp builtinpix.h \
	black_loop.c \
	blue_hatched_pattern.c \
	blue_hatched_pattern2.c \
	grayblue_hatched_pattern.c \
	gray_loop.c \
	red_dot.c \
	yellow_dot.c

EXTRA_DIST = \
	black_loop.png \
	gray_loop.png \
	hatched_blue_pattern2.png \
	hatched_blue_pattern.png \
	hatched_grayblue_pattern.png \
	hatched_pattern.svg \
	README.txt \
	red_dot.png \
	symbols.svg \
	yellow_dot.png
